--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -1128,10 +1128,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "548cbace",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_clean' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m X = \u001b[43mdf_clean\u001b[49m.drop(\u001b[33m\"\u001b[39m\u001b[33mOutcome\u001b[39m\u001b[33m\"\u001b[39m, axis=\u001b[32m1\u001b[39m)\n\u001b[32m      2\u001b[39m y = df_clean[\u001b[33m\"\u001b[39m\u001b[33mOutcome\u001b[39m\u001b[33m\"\u001b[39m]\n",
+      "\u001b[31mNameError\u001b[39m: name 'df_clean' is not defined"
+     ]
+    }
+   ],
    "source": [
     "X = df_clean.drop(\"Outcome\", axis=1)\n",
     "y = df_clean[\"Outcome\"]\n",
@@ -1283,8 +1295,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "122fcab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5c958223",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m X_train, X_temp, y_train, y_temp = train_test_split(\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     \u001b[43mX\u001b[49m, y,\n\u001b[32m      3\u001b[39m     test_size=\u001b[32m0.30\u001b[39m,\n\u001b[32m      4\u001b[39m     random_state=\u001b[32m42\u001b[39m,\n\u001b[32m      5\u001b[39m     stratify=y\n\u001b[32m      6\u001b[39m )\n",
+      "\u001b[31mNameError\u001b[39m: name 'X' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_temp, y_train, y_temp = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.30,\n",
+    "    random_state=42,\n",
+    "    stratify=y\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0d5ff03",
    "metadata": {},
    "outputs": [],
    "source": []
